# MealZ

./: .gitignore  AGENTS.md  MEALZ_MASTERPLAN.html  PRODUCT.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
docs/codex-protocol/: README.md
docs/codex-protocol/schema/: codex_app_server_protocol.v2.schemas.json
src/: App.css  App.test.tsx  App.tsx  bridge.ts  demo-data.ts  nutrition.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  lib.rs  main.rs  ui.rs
src-tauri/src/codex/: agent.rs  host.rs  mod.rs  protocol.rs  types.rs
src-tauri/src/domain/: mod.rs  models.rs  schema.rs  store.rs  tests.rs  tools.rs
src/components/: AppShell.tsx  Common.tsx  DateRangePicker.tsx  Onboarding.tsx  UpdateCenter.tsx
src/pages/: AgentChat.tsx  Dashboard.tsx  MemoryCenter.tsx  Recipes.tsx  Settings.tsx  Shopping.tsx  WeekPlan.tsx
